refactor: ajusta rotas para utilizar padrão em query params
